ansible/roles/media_stack/templates/nextcloud/db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: media
  labels:
    app: nextcloud-db
spec:
  selector:
    app: nextcloud-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
