ansible/roles/media_stack/templates/nextcloud/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: media
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
